--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/ketaki-c" target="_blank">Ketaki Chakraborty</a> and is
+          <a href="https://github.com/ketaki-c/weather-site" target="_blank"> on GitHub</a> and
+          <a href="https://dapper-queijadas-fa076d.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
